# cyder-template

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  config.sample.yaml  docker-compose.yml  docker-entrypoint  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docker/postgres/init/: 01-create-test-database.sql
front/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
front/src/: App.vue  style.css
front/src/pages/: Dashboard.vue  Items.vue  Users.vue
front/src/router/: index.ts
front/src/services/: http.ts  items.ts  users.ts
front/src/store/: index.ts
server/: Cargo.toml  diesel.toml
server/migrations/postgres/2026-05-15-000000_create_items_and_users/: down.sql  up.sql
server/migrations/sqlite/2026-05-15-000000_create_items_and_users/: up.sql
server/src/: app.rs  config.rs  error.rs  id.rs  main.rs
server/src/controller/: api_id.rs  health.rs  items.rs  mod.rs  users.rs
server/src/database/: items.rs  mod.rs  users.rs
server/src/schema/: postgres.rs  sqlite.rs
server/src/service/: items.rs  users.rs
