[package]
name = "cyder-template"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
default-run = "cyder-template"

[[bin]]
name = "cyder-template"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
config = { version = "0.15.22", features = ["yaml"] }
diesel = { version = "2.3.6", features = ["postgres", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel_migrations = "2.3.1"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
pq-sys = { version = "0.7.5", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.24.0"
tower = { version = "0.5.2", features = ["util"] }
