[package]
name = "cyder-template"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
default-run = "cyder-template"

[[bin]]
name = "cyder-template"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
config = { version = "0.15.22", features = ["yaml"] }
diesel = { version = "2.3.9", features = ["postgres", "returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel-async = { version = "0.9.0", features = ["bb8", "migrations", "pool", "postgres", "sqlite"] }
diesel_migrations = "2.3.2"
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }
pq-sys = { version = "0.7.5", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.24.0"
